@@ -10,6 +10,7 @@ GLOBAL NEWS - User visible changes.
 Version 4.*.* - September 30, 2000, by Shigio Yamaguchi
 
 * htags: create bless.sh when the -S option specified.
+* htags: config variables show_position added.
 
 Version 4.0.1 - September 26, 2000, by Shigio Yamaguchi
 
